# CrewAiTest

./: README.md  customer.db
app/: customer.db  pyproject.toml
app/app/: .env  main.py  phi.py  querydbllm.py  scratchpad.py  sqlINSERTin.py  sqlcreatetable.py  sqlselect.py  sqlselectfunction.py
