[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["james.watsohn@ensono.com <james.watsohn@ensono.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.1"
crewai = "^0.1.32"
ollama = "^0.1.2"
langchain-community = "^0.0.16"
langchain-experimental = "^0.0.49"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
